// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contacts with contacts should render with contacts 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
        >
          <div
            class="sc-bdfBwQ iMKUsi mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                  >
                    <button
                      class="Button__StyledButton-mdtvtf-0 fHYGyx"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ liSwOQ p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex my-0.5 ml-4 -space-x-2"
            >
              <div
                class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
              >
                <span
                  class="text-theme-secondary-text dark:text-theme-secondary-800"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      btc.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-4xl"
                data-testid="header__title"
              >
                My Contacts
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Manage your frequent contacts
              </div>
            </div>
            <div>
              <div
                class="flex justify-end items-top"
              >
                <div
                  class="relative"
                >
                  <button
                    class="my-auto h-full font-semibold cursor-pointer focus:outline-none"
                    data-testid="header-search-bar__button"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <span
                        class="text-theme-primary-300 dark:text-theme-secondary-700"
                      >
                        Search
                      </span>
                      <div
                        class="sc-bdfBwQ iNulIV text-theme-primary-300 dark:text-theme-secondary-600"
                        height="18"
                        width="18"
                      >
                        <svg>
                          search.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="pl-8 my-auto ml-8 h-10 border-l border-theme-secondary-300 dark:border-theme-secondary-800"
                />
                <button
                  class="Button__StyledButton-mdtvtf-0 ePkfgQ whitespace-nowrap"
                  data-testid="contacts__add-contact-btn"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Add Contact
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="w-full"
            data-testid="ContactList"
          >
            <div
              class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                        >
                          <div
                            class="sc-bdfBwQ kJrqvM transition-transform transform rotate-180"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-1"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Cryptoasset
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Address
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-1"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top"
                      >
                        <div>
                          Copy
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-1"
                      colspan="1"
                      data-testid="table__th--4"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top whitespace-nowrap justify-center no-border"
                      >
                        <div>
                          Account Type
                        </div>
                      </div>
                    </th>
                    <th
                      class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                      colspan="1"
                      data-testid="table__th--5"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Actions
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                          data-testid="ContactListItem__user--avatar"
                        >
                          <img
                            alt="Brian"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                            title="Brian"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            BR
                          </span>
                        </div>
                        <span
                          class="font-semibold"
                          data-testid="ContactListItem__name"
                        >
                          Brian
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="Circle-uw7h4j-0 hvqrfp border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-bdfBwQ iyevwF"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                              title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                            />
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D61mfS…J3Dyib
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 justify-center"
                      >
                        <div
                          class="inline-block cursor-pointer"
                          data-testid="clipboard__wrapper"
                        >
                          <div
                            class="text-theme-primary-300 dark:text-theme-secondary-700"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-2 text-sm font-bold justify-center"
                      >
                        <div
                          class="Circle-uw7h4j-0 cLIJTV border-black"
                        >
                          <div
                            class="sc-bdfBwQ catSEV"
                            height="25"
                            width="25"
                          >
                            <svg>
                              delegate.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <div
                          class="relative"
                        >
                          <span
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="Button__StyledButton-mdtvtf-0 OTOjy"
                              type="button"
                            >
                              <div
                                class="flex relative items-center space-x-2"
                              >
                                <div
                                  class="sc-bdfBwQ iyevwF"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 dLjWKP"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                          data-testid="ContactListItem__user--avatar"
                        >
                          <img
                            alt="Rok"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"100\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"70\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                            title="Rok"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <span
                          class="font-semibold"
                          data-testid="ContactListItem__name"
                        >
                          Rok
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="Circle-uw7h4j-0 hvqrfp border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-bdfBwQ iyevwF"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T"
                            />
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DFJ5Z5…LZkc6T
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 justify-center"
                      >
                        <div
                          class="inline-block cursor-pointer"
                          data-testid="clipboard__wrapper"
                        >
                          <div
                            class="text-theme-primary-300 dark:text-theme-secondary-700"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-2 text-sm font-bold justify-center"
                      />
                    </td>
                    <td
                      class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <div
                          class="relative"
                        >
                          <span
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="Button__StyledButton-mdtvtf-0 OTOjy"
                              type="button"
                            >
                              <div
                                class="flex relative items-center space-x-2"
                              >
                                <div
                                  class="sc-bdfBwQ iyevwF"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 dLjWKP"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      />
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="Circle-uw7h4j-0 hvqrfp border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-bdfBwQ iyevwF"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D9YiyRYMBS2ofzqkufjrkB9nHofWgJLM7f"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"30\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                              title="D9YiyRYMBS2ofzqkufjrkB9nHofWgJLM7f"
                            />
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D9YiyR…gJLM7f
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 justify-center"
                      >
                        <div
                          class="inline-block cursor-pointer"
                          data-testid="clipboard__wrapper"
                        >
                          <div
                            class="text-theme-primary-300 dark:text-theme-secondary-700"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-2 text-sm font-bold justify-center"
                      />
                    </td>
                    <td
                      class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      />
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      />
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="Circle-uw7h4j-0 hvqrfp border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-bdfBwQ iyevwF"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"0\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                              title="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                            />
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            DKrACQ…jfXYqu
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 justify-center"
                      >
                        <div
                          class="inline-block cursor-pointer"
                          data-testid="clipboard__wrapper"
                        >
                          <div
                            class="text-theme-primary-300 dark:text-theme-secondary-700"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-2 text-sm font-bold justify-center"
                      />
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      />
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                          data-testid="ContactListItem__user--avatar"
                        >
                          <img
                            alt="name"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"50\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"10\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                            title="name"
                          />
                          <span
                            class="absolute text-sm font-semibold text-theme-background"
                          >
                            NA
                          </span>
                        </div>
                        <span
                          class="font-semibold"
                          data-testid="ContactListItem__name"
                        >
                          name
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
                      >
                        <div
                          aria-label="ARK Devnet"
                          class="Circle-uw7h4j-0 hvqrfp border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-bdfBwQ iyevwF"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            />
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            D8rr7B…s6YUYD
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 justify-center"
                      >
                        <div
                          class="inline-block cursor-pointer"
                          data-testid="clipboard__wrapper"
                        >
                          <div
                            class="text-theme-primary-300 dark:text-theme-secondary-700"
                          >
                            <div
                              class="sc-bdfBwQ fPrsah"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-2 text-sm font-bold justify-center"
                      />
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
                      >
                        <div
                          class="relative"
                        >
                          <span
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="Button__StyledButton-mdtvtf-0 OTOjy"
                              type="button"
                            >
                              <div
                                class="flex relative items-center space-x-2"
                              >
                                <div
                                  class="sc-bdfBwQ iyevwF"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    settings.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Contacts without contacts should render empty 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eLHRPW flex w-12"
        >
          <div
            class="sc-bdfBwQ iMKUsi mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                  >
                    <button
                      class="Button__StyledButton-mdtvtf-0 fHYGyx"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ liSwOQ p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex overflow-hidden items-center rounded-lg"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 fHYGyx"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex my-0.5 ml-4 -space-x-2"
            >
              <div
                class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
              >
                <span
                  class="text-theme-secondary-text dark:text-theme-secondary-800"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      btc.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-4xl"
                data-testid="header__title"
              >
                My Contacts
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Manage your frequent contacts
              </div>
            </div>
            <div>
              <div
                class="flex justify-end items-top"
              >
                <button
                  class="Button__StyledButton-mdtvtf-0 ePkfgQ whitespace-nowrap"
                  data-testid="contacts__add-contact-btn"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Add Contact
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="text-center"
            data-testid="contacts__banner"
          >
            <svg
              class="mx-auto"
              height="175"
            >
              contacts-banner.svg
            </svg>
            <div
              class="mt-8 text-theme-secondary-text"
            >
              Add your most frequent contacts for fast, easy payments
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
